# scopetrak

./: .gitignore  README.md  image.ini  pyproject.toml  requirements.txt  setup.sh  slewtovega.py  solve.err  solve.wcs  solver.py  twirltest.py
app/: solver.py
flaskr/: __init__.py  schema.sql
flaskr/static/: base.css
flaskr/templates/: base.html  config.html  end.html  index.html  start.html
